--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@600&family=Prompt:wght@200&display=swap');
 html {
     font-family: phetsarath OT;
+    font-weight: 400;
+    /* line-height: 1.5; */
+    font-size: 1rem;
+    background-color: #f0f1f5;
+    letter-spacing: 0px;
 }
